# docspider

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
docspider/: items.py  middlewares.py  pipelines.py  settings.py
docspider/spiders/: readthedocs_spider.py
